EE25-ply/demo/02-PTML/parser.out
Created by PLY version 3.9 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> stat
Rule 1     stat -> map
Rule 2     stat -> list
Rule 3     stat -> wargs
Rule 4     stat -> data
Rule 5     stat -> sit
Rule 6     stat -> search
Rule 7     list -> LIST
Rule 8     map -> MAP
Rule 9     wargs -> LEAVE WORD
Rule 10    sit -> SIT WORD WORD
Rule 11    search -> SHOW WORD IS WORD
Rule 12    search -> SHOW WORD OF WORD
Rule 13    data -> DATA WORD
Rule 14    data -> DONE
Rule 15    data -> FIELD WORD

Terminals, with rules where they appear

DATA                 : 13
DONE                 : 14
FIELD                : 15
IS                   : 11
LEAVE                : 9
LIST                 : 7
MAP                  : 8
OF                   : 12
SHOW                 : 11 12
SIT                  : 10
WORD                 : 9 10 10 11 11 12 12 13 15
error                : 

Nonterminals, with rules where they appear

data                 : 4
list                 : 2
map                  : 1
search               : 6
sit                  : 5
stat                 : 0
wargs                : 3

Parsing method: LALR

state 0

    (0) S' -> . stat
    (1) stat -> . map
    (2) stat -> . list
    (3) stat -> . wargs
    (4) stat -> . data
    (5) stat -> . sit
    (6) stat -> . search
    (8) map -> . MAP
    (7) list -> . LIST
    (9) wargs -> . LEAVE WORD
    (13) data -> . DATA WORD
    (14) data -> . DONE
    (15) data -> . FIELD WORD
    (10) sit -> . SIT WORD WORD
    (11) search -> . SHOW WORD IS WORD
    (12) search -> . SHOW WORD OF WORD

    MAP             shift and go to state 12
    LIST            shift and go to state 1
    LEAVE           shift and go to state 9
    DATA            shift and go to state 14
    DONE            shift and go to state 11
    FIELD           shift and go to state 10
    SIT             shift and go to state 6
    SHOW            shift and go to state 13

    map                            shift and go to state 2
    stat                           shift and go to state 3
    sit                            shift and go to state 4
    search                         shift and go to state 5
    list                           shift and go to state 7
    wargs                          shift and go to state 8
    data                           shift and go to state 15

state 1

    (7) list -> LIST .

    $end            reduce using rule 7 (list -> LIST .)


state 2

    (1) stat -> map .

    $end            reduce using rule 1 (stat -> map .)


state 3

    (0) S' -> stat .



state 4

    (5) stat -> sit .

    $end            reduce using rule 5 (stat -> sit .)


state 5

    (6) stat -> search .

    $end            reduce using rule 6 (stat -> search .)


state 6

    (10) sit -> SIT . WORD WORD

    WORD            shift and go to state 16


state 7

    (2) stat -> list .

    $end            reduce using rule 2 (stat -> list .)


state 8

    (3) stat -> wargs .

    $end            reduce using rule 3 (stat -> wargs .)


state 9

    (9) wargs -> LEAVE . WORD

    WORD            shift and go to state 17


state 10

    (15) data -> FIELD . WORD

    WORD            shift and go to state 18


state 11

    (14) data -> DONE .

    $end            reduce using rule 14 (data -> DONE .)


state 12

    (8) map -> MAP .

    $end            reduce using rule 8 (map -> MAP .)


state 13

    (11) search -> SHOW . WORD IS WORD
    (12) search -> SHOW . WORD OF WORD

    WORD            shift and go to state 19


state 14

    (13) data -> DATA . WORD

    WORD            shift and go to state 20


state 15

    (4) stat -> data .

    $end            reduce using rule 4 (stat -> data .)


state 16

    (10) sit -> SIT WORD . WORD

    WORD            shift and go to state 21


state 17

    (9) wargs -> LEAVE WORD .

    $end            reduce using rule 9 (wargs -> LEAVE WORD .)


state 18

    (15) data -> FIELD WORD .

    $end            reduce using rule 15 (data -> FIELD WORD .)


state 19

    (11) search -> SHOW WORD . IS WORD
    (12) search -> SHOW WORD . OF WORD

    IS              shift and go to state 23
    OF              shift and go to state 22


state 20

    (13) data -> DATA WORD .

    $end            reduce using rule 13 (data -> DATA WORD .)


state 21

    (10) sit -> SIT WORD WORD .

    $end            reduce using rule 10 (sit -> SIT WORD WORD .)


state 22

    (12) search -> SHOW WORD OF . WORD

    WORD            shift and go to state 24


state 23

    (11) search -> SHOW WORD IS . WORD

    WORD            shift and go to state 25


state 24

    (12) search -> SHOW WORD OF WORD .

    $end            reduce using rule 12 (search -> SHOW WORD OF WORD .)


state 25

    (11) search -> SHOW WORD IS WORD .

    $end            reduce using rule 11 (search -> SHOW WORD IS WORD .)

